2004-12-15  Julian Foad  <julianfoad@btopenworld.com>

	* doc/grep.texi: Minor fixes of phrasing.
	* doc/grep.1: Likewise.
	* src/grep.c: Likewise.

2004-12-01  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (usage): Use ``FILE_PATTERN'' for --include and --exclude,
	  change ``only print'' to ``print only''.
	* doc/grep.1: Likewise; state that wildcard matching is used.
	  Move some options so that they are sorted alphabetically.
	* dfa.c, NEWS: Fix typos.

2004-11-28  Benno Schulenberg  <benno@nietvergeten.nl>  (tiny change)

	* src/grep.c (usage): Clean up several details in the usage string.
	* doc/grep.1: Fix descriptions of --include and --exclude.
	* doc/grep.texi: Likewise.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: The egrep and fgrep script now use their own
	path to construct the full pathname of grep.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: Merged the rules for creating the egrep and
	fgrep script.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (usage): Make sure both copies of the ``usage''
	  strings match.  Add ``(C)'' to the copyright notice.
	* src/dfa.c: Changed ``out of memory'' to ``memory exhausted'' to
	  match messages elsewhere in the source.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c: Use mbsupport.h .
	* src/dfa.c: Move the inclusion of mbsupport.h lower.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (main): Use PACKAGE_STRING for --version.

2004-11-20  Benno Schulenberg  <benno@nietvergeten.nl>  (tiny change)

	* src/grep.c (reset): Move the stat check ...
	(grepfile): ... here, and also check for a fifo.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	This change is based on a suggestion by Elliott Hughes.

	* src/grep.c (usage): Use PACKAGE_BUGREPORT.
	* po/*.po: Hacked the current translation again.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	* configure.in: Added a copyright notice (using gawk as a template).